--- a/Packet_analysis.ipynb
+++ b/Packet_analysis.ipynb
@@ -931,9 +931,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_802 = pd.read_csv('api_console_session_2022-02-06.log', delimiter=',', names=[\"Time\",\"Id\",\"Type\", \"Data\", \"RF data\", \"Start delimiter\",\n",
+    "log_802 = pd.read_csv('api_console_session_2022-02-06.log', delimiter=',', names=[\"Time\",\"Id\",\"Type\", \"Data\", \"Start delimiter\",\n",
     "                                                                                  \"Length\", \"Frame type\", \"16-bit source address\",\n",
-    "                                                                                  \"RSSI\", \"Options\", \"Checksum\"])"
+    "                                                                                  \"RSSI\", \"Options\", \"RF data\", \"Checksum\"])"
    ]
   },
   {
@@ -1051,13 +1051,13 @@
        "      <th></th>\n",
        "      <th>Time</th>\n",
        "      <th>Type</th>\n",
-       "      <th>RF data</th>\n",
        "      <th>Start delimiter</th>\n",
        "      <th>Length</th>\n",
        "      <th>Frame type</th>\n",
        "      <th>16-bit source address</th>\n",
        "      <th>RSSI</th>\n",
        "      <th>Options</th>\n",
+       "      <th>RF data</th>\n",
        "      <th>Checksum</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1079,65 +1079,65 @@
        "      <th>0</th>\n",
        "      <td>02-06-2022 20:52:35.816</td>\n",
        "      <td>RECV</td>\n",
-       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>7E</td>\n",
        "      <td>0019</td>\n",
        "      <td>81</td>\n",
        "      <td>0000</td>\n",
        "      <td>33</td>\n",
        "      <td>00</td>\n",
+       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>02-06-2022 20:52:35.878</td>\n",
        "      <td>RECV</td>\n",
-       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>7E</td>\n",
        "      <td>0019</td>\n",
        "      <td>81</td>\n",
        "      <td>0000</td>\n",
        "      <td>33</td>\n",
        "      <td>00</td>\n",
+       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>02-06-2022 20:52:36.002</td>\n",
        "      <td>RECV</td>\n",
-       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>7E</td>\n",
        "      <td>0019</td>\n",
        "      <td>81</td>\n",
        "      <td>0000</td>\n",
        "      <td>33</td>\n",
        "      <td>00</td>\n",
+       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>02-06-2022 20:52:36.128</td>\n",
        "      <td>RECV</td>\n",
-       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>7E</td>\n",
        "      <td>0019</td>\n",
        "      <td>81</td>\n",
        "      <td>0000</td>\n",
        "      <td>33</td>\n",
        "      <td>00</td>\n",
+       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>02-06-2022 20:52:36.189</td>\n",
        "      <td>RECV</td>\n",
-       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>7E</td>\n",
        "      <td>0019</td>\n",
        "      <td>81</td>\n",
        "      <td>0000</td>\n",
        "      <td>33</td>\n",
        "      <td>00</td>\n",
+       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1157,65 +1157,65 @@
        "      <th>991</th>\n",
        "      <td>02-06-2022 20:54:24.925</td>\n",
        "      <td>RECV</td>\n",
-       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>7E</td>\n",
        "      <td>0019</td>\n",
        "      <td>81</td>\n",
        "      <td>0000</td>\n",
        "      <td>2D</td>\n",
        "      <td>00</td>\n",
+       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>4D</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>992</th>\n",
        "      <td>02-06-2022 20:54:24.987</td>\n",
        "      <td>RECV</td>\n",
-       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>7E</td>\n",
        "      <td>0019</td>\n",
        "      <td>81</td>\n",
        "      <td>0000</td>\n",
        "      <td>2E</td>\n",
        "      <td>00</td>\n",
+       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>4C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>993</th>\n",
        "      <td>02-06-2022 20:54:25.114</td>\n",
        "      <td>RECV</td>\n",
-       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>7E</td>\n",
        "      <td>0019</td>\n",
        "      <td>81</td>\n",
        "      <td>0000</td>\n",
        "      <td>2E</td>\n",
        "      <td>00</td>\n",
+       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>4C</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>994</th>\n",
        "      <td>02-06-2022 20:54:25.240</td>\n",
        "      <td>RECV</td>\n",
-       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>7E</td>\n",
        "      <td>0019</td>\n",
        "      <td>81</td>\n",
        "      <td>0000</td>\n",
        "      <td>2D</td>\n",
        "      <td>00</td>\n",
+       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>4D</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>995</th>\n",
        "      <td>02-06-2022 20:54:25.365</td>\n",
        "      <td>RECV</td>\n",
-       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>7E</td>\n",
        "      <td>0019</td>\n",
        "      <td>81</td>\n",
        "      <td>0000</td>\n",
        "      <td>2E</td>\n",
        "      <td>00</td>\n",
+       "      <td>313233343536373839306162636465666768696A</td>\n",
        "      <td>4C</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1224,47 +1224,47 @@
        "</div>"
       ],
       "text/plain": [
-       "                        Time  Type                                   RF data  \\\n",
-       "Id                                                                             \n",
-       "0    02-06-2022 20:52:35.816  RECV  313233343536373839306162636465666768696A   \n",
-       "1    02-06-2022 20:52:35.878  RECV  313233343536373839306162636465666768696A   \n",
-       "2    02-06-2022 20:52:36.002  RECV  313233343536373839306162636465666768696A   \n",
-       "3    02-06-2022 20:52:36.128  RECV  313233343536373839306162636465666768696A   \n",
-       "4    02-06-2022 20:52:36.189  RECV  313233343536373839306162636465666768696A   \n",
-       "..                       ...   ...                                       ...   \n",
-       "991  02-06-2022 20:54:24.925  RECV  313233343536373839306162636465666768696A   \n",
-       "992  02-06-2022 20:54:24.987  RECV  313233343536373839306162636465666768696A   \n",
-       "993  02-06-2022 20:54:25.114  RECV  313233343536373839306162636465666768696A   \n",
-       "994  02-06-2022 20:54:25.240  RECV  313233343536373839306162636465666768696A   \n",
-       "995  02-06-2022 20:54:25.365  RECV  313233343536373839306162636465666768696A   \n",
+       "                        Time  Type Start delimiter Length Frame type  \\\n",
+       "Id                                                                     \n",
+       "0    02-06-2022 20:52:35.816  RECV              7E   0019         81   \n",
+       "1    02-06-2022 20:52:35.878  RECV              7E   0019         81   \n",
+       "2    02-06-2022 20:52:36.002  RECV              7E   0019         81   \n",
+       "3    02-06-2022 20:52:36.128  RECV              7E   0019         81   \n",
+       "4    02-06-2022 20:52:36.189  RECV              7E   0019         81   \n",
+       "..                       ...   ...             ...    ...        ...   \n",
+       "991  02-06-2022 20:54:24.925  RECV              7E   0019         81   \n",
+       "992  02-06-2022 20:54:24.987  RECV              7E   0019         81   \n",
+       "993  02-06-2022 20:54:25.114  RECV              7E   0019         81   \n",
+       "994  02-06-2022 20:54:25.240  RECV              7E   0019         81   \n",
+       "995  02-06-2022 20:54:25.365  RECV              7E   0019         81   \n",
        "\n",
-       "    Start delimiter Length Frame type 16-bit source address RSSI Options  \\\n",
-       "Id                                                                         \n",
-       "0                7E   0019         81                  0000   33      00   \n",
-       "1                7E   0019         81                  0000   33      00   \n",
-       "2                7E   0019         81                  0000   33      00   \n",
-       "3                7E   0019         81                  0000   33      00   \n",
-       "4                7E   0019         81                  0000   33      00   \n",
-       "..              ...    ...        ...                   ...  ...     ...   \n",
-       "991              7E   0019         81                  0000   2D      00   \n",
-       "992              7E   0019         81                  0000   2E      00   \n",
-       "993              7E   0019         81                  0000   2E      00   \n",
-       "994              7E   0019         81                  0000   2D      00   \n",
-       "995              7E   0019         81                  0000   2E      00   \n",
+       "    16-bit source address RSSI Options  \\\n",
+       "Id                                       \n",
+       "0                    0000   33      00   \n",
+       "1                    0000   33      00   \n",
+       "2                    0000   33      00   \n",
+       "3                    0000   33      00   \n",
+       "4                    0000   33      00   \n",
+       "..                    ...  ...     ...   \n",
+       "991                  0000   2D      00   \n",
+       "992                  0000   2E      00   \n",
+       "993                  0000   2E      00   \n",
+       "994                  0000   2D      00   \n",
+       "995                  0000   2E      00   \n",
        "\n",
-       "    Checksum  \n",
-       "Id            \n",
-       "0         47  \n",
-       "1         47  \n",
-       "2         47  \n",
-       "3         47  \n",
-       "4         47  \n",
-       "..       ...  \n",
-       "991       4D  \n",
-       "992       4C  \n",
-       "993       4C  \n",
-       "994       4D  \n",
-       "995       4C  \n",
+       "                                      RF data Checksum  \n",
+       "Id                                                      \n",
+       "0    313233343536373839306162636465666768696A       47  \n",
+       "1    313233343536373839306162636465666768696A       47  \n",
+       "2    313233343536373839306162636465666768696A       47  \n",
+       "3    313233343536373839306162636465666768696A       47  \n",
+       "4    313233343536373839306162636465666768696A       47  \n",
+       "..                                        ...      ...  \n",
+       "991  313233343536373839306162636465666768696A       4D  \n",
+       "992  313233343536373839306162636465666768696A       4C  \n",
+       "993  313233343536373839306162636465666768696A       4C  \n",
+       "994  313233343536373839306162636465666768696A       4D  \n",
+       "995  313233343536373839306162636465666768696A       4C  \n",
        "\n",
        "[996 rows x 10 columns]"
       ]
