--- a/Total packet length including retransmission.ipynb
+++ b/Total packet length including retransmission.ipynb
@@ -2882,158 +2882,16 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "#T_fd014_row0_col0, #T_fd014_row0_col1, #T_fd014_row0_col2, #T_fd014_row0_col3, #T_fd014_row0_col4, #T_fd014_row0_col5, #T_fd014_row0_col6, #T_fd014_row1_col0, #T_fd014_row1_col1, #T_fd014_row1_col2, #T_fd014_row1_col3, #T_fd014_row1_col4, #T_fd014_row1_col5, #T_fd014_row1_col6, #T_fd014_row2_col0, #T_fd014_row2_col1, #T_fd014_row2_col2, #T_fd014_row2_col3, #T_fd014_row2_col4, #T_fd014_row2_col5, #T_fd014_row2_col6, #T_fd014_row3_col0, #T_fd014_row3_col1, #T_fd014_row3_col2, #T_fd014_row3_col3, #T_fd014_row3_col4, #T_fd014_row3_col5, #T_fd014_row3_col6, #T_fd014_row4_col0, #T_fd014_row4_col1, #T_fd014_row4_col2, #T_fd014_row4_col3, #T_fd014_row4_col4, #T_fd014_row4_col5, #T_fd014_row4_col6, #T_fd014_row5_col0, #T_fd014_row5_col1, #T_fd014_row5_col2, #T_fd014_row5_col3, #T_fd014_row5_col4, #T_fd014_row5_col5, #T_fd014_row5_col6, #T_fd014_row6_col0, #T_fd014_row6_col1, #T_fd014_row6_col2, #T_fd014_row6_col3, #T_fd014_row6_col4, #T_fd014_row6_col5, #T_fd014_row6_col6, #T_fd014_row7_col0, #T_fd014_row7_col1, #T_fd014_row7_col2, #T_fd014_row7_col3, #T_fd014_row7_col4, #T_fd014_row7_col5, #T_fd014_row7_col6, #T_fd014_row8_col0, #T_fd014_row8_col1, #T_fd014_row8_col2, #T_fd014_row8_col3, #T_fd014_row8_col4, #T_fd014_row8_col5, #T_fd014_row8_col6 {\n",
-       "  text-align: right;\n",
-       "}\n",
-       "</style>\n",
-       "<table id=\"T_fd014_\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th class=\"col_heading level0 col0\" >11 ~ 12</th>\n",
-       "      <th class=\"col_heading level0 col1\" >66 ~ 85</th>\n",
-       "      <th class=\"col_heading level0 col2\" >65 ~ 73</th>\n",
-       "      <th class=\"col_heading level0 col3\" >72 ~ 93</th>\n",
-       "      <th class=\"col_heading level0 col4\" >71 ~ 85</th>\n",
-       "      <th class=\"col_heading level0 col5\" >76 ~ 91</th>\n",
-       "      <th class=\"col_heading level0 col6\" >79 ~ 92</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th class=\"blank level1\" >&nbsp;</th>\n",
-       "      <th class=\"col_heading level1 col0\" >11.803</th>\n",
-       "      <th class=\"col_heading level1 col1\" >71.71</th>\n",
-       "      <th class=\"col_heading level1 col2\" >69.368</th>\n",
-       "      <th class=\"col_heading level1 col3\" >79.113</th>\n",
-       "      <th class=\"col_heading level1 col4\" >76.185</th>\n",
-       "      <th class=\"col_heading level1 col5\" >81.931</th>\n",
-       "      <th class=\"col_heading level1 col6\" >88.579</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th class=\"blank level2\" >&nbsp;</th>\n",
-       "      <th class=\"col_heading level2 col0\" >0m</th>\n",
-       "      <th class=\"col_heading level2 col1\" >4.5m</th>\n",
-       "      <th class=\"col_heading level2 col2\" >9m</th>\n",
-       "      <th class=\"col_heading level2 col3\" >13.5m</th>\n",
-       "      <th class=\"col_heading level2 col4\" >18m</th>\n",
-       "      <th class=\"col_heading level2 col5\" >22.5m</th>\n",
-       "      <th class=\"col_heading level2 col6\" >27m</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th id=\"T_fd014_level0_row0\" class=\"row_heading level0 row0\" >20bytes</th>\n",
-       "      <td id=\"T_fd014_row0_col0\" class=\"data row0 col0\" >1.000000</td>\n",
-       "      <td id=\"T_fd014_row0_col1\" class=\"data row0 col1\" >0.994000</td>\n",
-       "      <td id=\"T_fd014_row0_col2\" class=\"data row0 col2\" >0.995000</td>\n",
-       "      <td id=\"T_fd014_row0_col3\" class=\"data row0 col3\" >0.951000</td>\n",
-       "      <td id=\"T_fd014_row0_col4\" class=\"data row0 col4\" >0.948000</td>\n",
-       "      <td id=\"T_fd014_row0_col5\" class=\"data row0 col5\" >0.922000</td>\n",
-       "      <td id=\"T_fd014_row0_col6\" class=\"data row0 col6\" >0.011000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_fd014_level0_row1\" class=\"row_heading level0 row1\" >30bytes</th>\n",
-       "      <td id=\"T_fd014_row1_col0\" class=\"data row1 col0\" >1.000000</td>\n",
-       "      <td id=\"T_fd014_row1_col1\" class=\"data row1 col1\" >0.989000</td>\n",
-       "      <td id=\"T_fd014_row1_col2\" class=\"data row1 col2\" >0.986000</td>\n",
-       "      <td id=\"T_fd014_row1_col3\" class=\"data row1 col3\" >0.964000</td>\n",
-       "      <td id=\"T_fd014_row1_col4\" class=\"data row1 col4\" >0.987000</td>\n",
-       "      <td id=\"T_fd014_row1_col5\" class=\"data row1 col5\" >0.977000</td>\n",
-       "      <td id=\"T_fd014_row1_col6\" class=\"data row1 col6\" >0.033000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_fd014_level0_row2\" class=\"row_heading level0 row2\" >40bytes</th>\n",
-       "      <td id=\"T_fd014_row2_col0\" class=\"data row2 col0\" >1.000000</td>\n",
-       "      <td id=\"T_fd014_row2_col1\" class=\"data row2 col1\" >0.983000</td>\n",
-       "      <td id=\"T_fd014_row2_col2\" class=\"data row2 col2\" >0.987000</td>\n",
-       "      <td id=\"T_fd014_row2_col3\" class=\"data row2 col3\" >0.922000</td>\n",
-       "      <td id=\"T_fd014_row2_col4\" class=\"data row2 col4\" >0.938000</td>\n",
-       "      <td id=\"T_fd014_row2_col5\" class=\"data row2 col5\" >0.953000</td>\n",
-       "      <td id=\"T_fd014_row2_col6\" class=\"data row2 col6\" >0.402000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_fd014_level0_row3\" class=\"row_heading level0 row3\" >50bytes</th>\n",
-       "      <td id=\"T_fd014_row3_col0\" class=\"data row3 col0\" >1.000000</td>\n",
-       "      <td id=\"T_fd014_row3_col1\" class=\"data row3 col1\" >0.978000</td>\n",
-       "      <td id=\"T_fd014_row3_col2\" class=\"data row3 col2\" >0.984000</td>\n",
-       "      <td id=\"T_fd014_row3_col3\" class=\"data row3 col3\" >0.929000</td>\n",
-       "      <td id=\"T_fd014_row3_col4\" class=\"data row3 col4\" >0.981000</td>\n",
-       "      <td id=\"T_fd014_row3_col5\" class=\"data row3 col5\" >0.970000</td>\n",
-       "      <td id=\"T_fd014_row3_col6\" class=\"data row3 col6\" >0.021000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_fd014_level0_row4\" class=\"row_heading level0 row4\" >60bytes</th>\n",
-       "      <td id=\"T_fd014_row4_col0\" class=\"data row4 col0\" >1.000000</td>\n",
-       "      <td id=\"T_fd014_row4_col1\" class=\"data row4 col1\" >0.990000</td>\n",
-       "      <td id=\"T_fd014_row4_col2\" class=\"data row4 col2\" >0.992000</td>\n",
-       "      <td id=\"T_fd014_row4_col3\" class=\"data row4 col3\" >0.962000</td>\n",
-       "      <td id=\"T_fd014_row4_col4\" class=\"data row4 col4\" >0.979000</td>\n",
-       "      <td id=\"T_fd014_row4_col5\" class=\"data row4 col5\" >0.947000</td>\n",
-       "      <td id=\"T_fd014_row4_col6\" class=\"data row4 col6\" >0.006000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_fd014_level0_row5\" class=\"row_heading level0 row5\" >70bytes</th>\n",
-       "      <td id=\"T_fd014_row5_col0\" class=\"data row5 col0\" >1.000000</td>\n",
-       "      <td id=\"T_fd014_row5_col1\" class=\"data row5 col1\" >0.990000</td>\n",
-       "      <td id=\"T_fd014_row5_col2\" class=\"data row5 col2\" >0.986000</td>\n",
-       "      <td id=\"T_fd014_row5_col3\" class=\"data row5 col3\" >0.963000</td>\n",
-       "      <td id=\"T_fd014_row5_col4\" class=\"data row5 col4\" >0.958000</td>\n",
-       "      <td id=\"T_fd014_row5_col5\" class=\"data row5 col5\" >0.977000</td>\n",
-       "      <td id=\"T_fd014_row5_col6\" class=\"data row5 col6\" >None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_fd014_level0_row6\" class=\"row_heading level0 row6\" >80bytes</th>\n",
-       "      <td id=\"T_fd014_row6_col0\" class=\"data row6 col0\" >1.000000</td>\n",
-       "      <td id=\"T_fd014_row6_col1\" class=\"data row6 col1\" >0.982000</td>\n",
-       "      <td id=\"T_fd014_row6_col2\" class=\"data row6 col2\" >0.982000</td>\n",
-       "      <td id=\"T_fd014_row6_col3\" class=\"data row6 col3\" >0.958000</td>\n",
-       "      <td id=\"T_fd014_row6_col4\" class=\"data row6 col4\" >0.978000</td>\n",
-       "      <td id=\"T_fd014_row6_col5\" class=\"data row6 col5\" >0.972000</td>\n",
-       "      <td id=\"T_fd014_row6_col6\" class=\"data row6 col6\" >0.034000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_fd014_level0_row7\" class=\"row_heading level0 row7\" >90bytes</th>\n",
-       "      <td id=\"T_fd014_row7_col0\" class=\"data row7 col0\" >1.000000</td>\n",
-       "      <td id=\"T_fd014_row7_col1\" class=\"data row7 col1\" >0.973000</td>\n",
-       "      <td id=\"T_fd014_row7_col2\" class=\"data row7 col2\" >0.979000</td>\n",
-       "      <td id=\"T_fd014_row7_col3\" class=\"data row7 col3\" >0.945000</td>\n",
-       "      <td id=\"T_fd014_row7_col4\" class=\"data row7 col4\" >0.982000</td>\n",
-       "      <td id=\"T_fd014_row7_col5\" class=\"data row7 col5\" >0.978000</td>\n",
-       "      <td id=\"T_fd014_row7_col6\" class=\"data row7 col6\" >None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_fd014_level0_row8\" class=\"row_heading level0 row8\" >100bytes</th>\n",
-       "      <td id=\"T_fd014_row8_col0\" class=\"data row8 col0\" >1.000000</td>\n",
-       "      <td id=\"T_fd014_row8_col1\" class=\"data row8 col1\" >0.998000</td>\n",
-       "      <td id=\"T_fd014_row8_col2\" class=\"data row8 col2\" >0.988000</td>\n",
-       "      <td id=\"T_fd014_row8_col3\" class=\"data row8 col3\" >0.965000</td>\n",
-       "      <td id=\"T_fd014_row8_col4\" class=\"data row8 col4\" >0.981000</td>\n",
-       "      <td id=\"T_fd014_row8_col5\" class=\"data row8 col5\" >0.974000</td>\n",
-       "      <td id=\"T_fd014_row8_col6\" class=\"data row8 col6\" >0.974000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x16a00e6f580>"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "prr_table\n",
     "\n",
     "prr_table.columns = pd.MultiIndex.from_tuples(\n",
     "    zip(RSSI_min_max_list, np.round(RSSI_mean_list, 3), prr_table.columns))\n",
     "\n",
-    "prr_table.style.set_properties(**{'text-align': 'right'})"
+    "prr_table.style.set_properties(**{'text-align': 'right'}) #columns 보기 쉽게 정렬\n",
+    "\n",
+    "pd.options.display.float_format = '{:.3f}'.format #소수점 아래 3자리까지만"
    ]
   },
   {
@@ -3077,13 +2935,33 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>11 ~ 12</th>\n",
+       "      <th>66 ~ 85</th>\n",
+       "      <th>65 ~ 73</th>\n",
+       "      <th>72 ~ 93</th>\n",
+       "      <th>71 ~ 85</th>\n",
+       "      <th>76 ~ 91</th>\n",
+       "      <th>79 ~ 92</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>11.803</th>\n",
+       "      <th>71.710</th>\n",
+       "      <th>69.368</th>\n",
+       "      <th>79.113</th>\n",
+       "      <th>76.185</th>\n",
+       "      <th>81.931</th>\n",
+       "      <th>88.579</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th></th>\n",
        "      <th>0m</th>\n",
        "      <th>4.5m</th>\n",
@@ -3097,109 +2975,111 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>20bytes</th>\n",
-       "      <td>50000</td>\n",
-       "      <td>50300</td>\n",
-       "      <td>50250</td>\n",
-       "      <td>52450</td>\n",
-       "      <td>52600</td>\n",
-       "      <td>53900</td>\n",
-       "      <td>99450</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.994</td>\n",
+       "      <td>0.995</td>\n",
+       "      <td>0.951</td>\n",
+       "      <td>0.948</td>\n",
+       "      <td>0.922</td>\n",
+       "      <td>0.011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30bytes</th>\n",
-       "      <td>33334</td>\n",
-       "      <td>33700</td>\n",
-       "      <td>33800</td>\n",
-       "      <td>34534</td>\n",
-       "      <td>33767</td>\n",
-       "      <td>34100</td>\n",
-       "      <td>65567</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.989</td>\n",
+       "      <td>0.986</td>\n",
+       "      <td>0.964</td>\n",
+       "      <td>0.987</td>\n",
+       "      <td>0.977</td>\n",
+       "      <td>0.033</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40bytes</th>\n",
-       "      <td>25000</td>\n",
-       "      <td>25425</td>\n",
-       "      <td>25325</td>\n",
-       "      <td>26950</td>\n",
-       "      <td>26550</td>\n",
-       "      <td>26175</td>\n",
-       "      <td>39950</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.983</td>\n",
+       "      <td>0.987</td>\n",
+       "      <td>0.922</td>\n",
+       "      <td>0.938</td>\n",
+       "      <td>0.953</td>\n",
+       "      <td>0.402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50bytes</th>\n",
-       "      <td>20000</td>\n",
-       "      <td>20440</td>\n",
-       "      <td>20320</td>\n",
-       "      <td>21420</td>\n",
-       "      <td>20380</td>\n",
-       "      <td>20600</td>\n",
-       "      <td>39580</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.978</td>\n",
+       "      <td>0.984</td>\n",
+       "      <td>0.929</td>\n",
+       "      <td>0.981</td>\n",
+       "      <td>0.970</td>\n",
+       "      <td>0.021</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>60bytes</th>\n",
-       "      <td>16667</td>\n",
-       "      <td>16834</td>\n",
-       "      <td>16800</td>\n",
-       "      <td>17300</td>\n",
-       "      <td>17017</td>\n",
-       "      <td>17550</td>\n",
-       "      <td>33234</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.990</td>\n",
+       "      <td>0.992</td>\n",
+       "      <td>0.962</td>\n",
+       "      <td>0.979</td>\n",
+       "      <td>0.947</td>\n",
+       "      <td>0.006</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>70bytes</th>\n",
-       "      <td>14286</td>\n",
-       "      <td>14429</td>\n",
-       "      <td>14486</td>\n",
-       "      <td>14815</td>\n",
-       "      <td>14886</td>\n",
-       "      <td>14615</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.990</td>\n",
+       "      <td>0.986</td>\n",
+       "      <td>0.963</td>\n",
+       "      <td>0.958</td>\n",
+       "      <td>0.977</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>80bytes</th>\n",
-       "      <td>12500</td>\n",
-       "      <td>12725</td>\n",
-       "      <td>12725</td>\n",
-       "      <td>13025</td>\n",
-       "      <td>12775</td>\n",
-       "      <td>12850</td>\n",
-       "      <td>24575</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.982</td>\n",
+       "      <td>0.982</td>\n",
+       "      <td>0.958</td>\n",
+       "      <td>0.978</td>\n",
+       "      <td>0.972</td>\n",
+       "      <td>0.034</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>90bytes</th>\n",
-       "      <td>11112</td>\n",
-       "      <td>11412</td>\n",
-       "      <td>11345</td>\n",
-       "      <td>11723</td>\n",
-       "      <td>11312</td>\n",
-       "      <td>11356</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.973</td>\n",
+       "      <td>0.979</td>\n",
+       "      <td>0.945</td>\n",
+       "      <td>0.982</td>\n",
+       "      <td>0.978</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100bytes</th>\n",
-       "      <td>10000</td>\n",
-       "      <td>10020</td>\n",
-       "      <td>10120</td>\n",
-       "      <td>10350</td>\n",
-       "      <td>10190</td>\n",
-       "      <td>10260</td>\n",
-       "      <td>10260</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.998</td>\n",
+       "      <td>0.988</td>\n",
+       "      <td>0.965</td>\n",
+       "      <td>0.981</td>\n",
+       "      <td>0.974</td>\n",
+       "      <td>0.974</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             0m   4.5m     9m  13.5m    18m  22.5m    27m\n",
-       "20bytes   50000  50300  50250  52450  52600  53900  99450\n",
-       "30bytes   33334  33700  33800  34534  33767  34100  65567\n",
-       "40bytes   25000  25425  25325  26950  26550  26175  39950\n",
-       "50bytes   20000  20440  20320  21420  20380  20600  39580\n",
-       "60bytes   16667  16834  16800  17300  17017  17550  33234\n",
-       "70bytes   14286  14429  14486  14815  14886  14615   None\n",
-       "80bytes   12500  12725  12725  13025  12775  12850  24575\n",
-       "90bytes   11112  11412  11345  11723  11312  11356   None\n",
-       "100bytes  10000  10020  10120  10350  10190  10260  10260"
+       "         11 ~ 12 66 ~ 85 65 ~ 73 72 ~ 93 71 ~ 85 76 ~ 91 79 ~ 92\n",
+       "          11.803  71.710  69.368  79.113  76.185  81.931  88.579\n",
+       "              0m    4.5m      9m   13.5m     18m   22.5m     27m\n",
+       "20bytes    1.000   0.994   0.995   0.951   0.948   0.922   0.011\n",
+       "30bytes    1.000   0.989   0.986   0.964   0.987   0.977   0.033\n",
+       "40bytes    1.000   0.983   0.987   0.922   0.938   0.953   0.402\n",
+       "50bytes    1.000   0.978   0.984   0.929   0.981   0.970   0.021\n",
+       "60bytes    1.000   0.990   0.992   0.962   0.979   0.947   0.006\n",
+       "70bytes    1.000   0.990   0.986   0.963   0.958   0.977    None\n",
+       "80bytes    1.000   0.982   0.982   0.958   0.978   0.972   0.034\n",
+       "90bytes    1.000   0.973   0.979   0.945   0.982   0.978    None\n",
+       "100bytes   1.000   0.998   0.988   0.965   0.981   0.974   0.974"
       ]
      },
      "execution_count": 37,
@@ -3208,7 +3088,7 @@
     }
    ],
    "source": [
-    "packet_table"
+    "prr_table"
    ]
   },
   {
@@ -3216,7 +3096,7 @@
    "id": "bd5b462f",
    "metadata": {},
    "source": [
-    "# 헤더를 포함한 재전송 바이트"
+    "# 헤더를 포함한 전체 전송 바이트"
    ]
   },
   {
