--- a/packet_analysis2.ipynb
+++ b/packet_analysis2.ipynb
@@ -400,19 +400,98 @@
    "execution_count": 17,
    "id": "468d2de5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10, 22_5m\n",
+      "25\n",
+      "0.05\n",
+      "2000000.0\n",
+      "10, 23_4m\n",
+      "126\n",
+      "0.252\n",
+      "2540106.9518716577\n",
+      "10, 23_85m\n",
+      "30\n",
+      "0.06\n",
+      "2021276.595744681\n",
+      "10, 24_3m\n",
+      "77\n",
+      "0.154\n",
+      "2245862.8841607566\n",
+      "10, 24_75m\n",
+      "415\n",
+      "0.83\n",
+      "11176470.58823529\n",
+      "10, 25_2m\n",
+      "453\n",
+      "0.906\n",
+      "20212765.957446814\n",
+      "10, 25_65m\n",
+      "73\n",
+      "0.146\n",
+      "2224824.355971897\n",
+      "10, 26_1m\n",
+      "108\n",
+      "0.216\n",
+      "2423469.387755102\n",
+      "10, 26_55m\n",
+      "114\n",
+      "0.228\n",
+      "2461139.896373057\n",
+      "114, 22_5m\n",
+      "59\n",
+      "0.118\n",
+      "1223296.3360782908\n",
+      "114, 23_4m\n",
+      "54\n",
+      "0.108\n",
+      "1209582.2515931083\n",
+      "114, 23_85m\n",
+      "55\n",
+      "0.11\n",
+      "1212300.413956239\n",
+      "114, 24_3m\n",
+      "63\n",
+      "0.126\n",
+      "1234493.5565458268\n",
+      "114, 24_75m\n",
+      "464\n",
+      "0.928\n",
+      "14985380.116959073\n",
+      "114, 25_2m\n",
+      "463\n",
+      "0.926\n",
+      "14580369.843527747\n",
+      "114, 25_65m\n",
+      "468\n",
+      "0.936\n",
+      "16858552.63157896\n",
+      "114, 26_1m\n",
+      "488\n",
+      "0.976\n",
+      "44956140.35087715\n",
+      "114, 26_55m\n",
+      "488\n",
+      "0.976\n",
+      "44956140.35087715\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
     "for i, k in zip(packet_bytes, packet_bytes_list):\n",
     "    for j, m in zip(packet_distance_name, packet_distance): #거리 목록, 분할 바이트 수\n",
     "        if not globals()['log_' + str(i) + 'bytes_distance_' + str(j)].empty: \n",
-    "#             print(f\"{i}, {j}\") #디버깅용\n",
+    "            print(f\"{i}, {j}\") #디버깅용\n",
     "            send_data = 1000000\n",
     "            whole_packet = 500 #몇 번 보냈는가?\n",
     "            \n",
     "            missed_packet = whole_packet - globals()['log_' + str(i) + 'bytes_distance_' + str(j)].shape[0] #누락 패킷 탐지\n",
-    "#             print(missed_packet) #누락 패킷 개수\n",
+    "            print(missed_packet) #누락 패킷 개수\n",
     "    \n",
     "#             abnormal_packet_rate = (missed_packet + len(globals()['log_' + str(i) + 'byte_distance_' + str(j)][\"Length\"][globals()['log_' + str(i) + 'byte_distance_' + str(j)][\"Length\"] != int(i) + 5])) / whole_packet\n",
     "            #비정상 패킷 비율 = (누락 패킷 + 길이가 다른 수신 패킷) / 전체 패킷\n",
@@ -420,25 +499,35 @@
     "            abnormal_packet_rate = missed_packet / whole_packet\n",
     "            #비정상 패킷 비율 = 누락 패킷 / 전체 패킷\n",
     "            #prr = 1 - 비정상 패킷 비율\n",
-    "#             print(abnormal_packet_rate)\n",
+    "            print(abnormal_packet_rate)\n",
     "            \n",
     "            prr_table[m][k] = 1 - abnormal_packet_rate\n",
-    "            #prr 테이블 갱신\n",
-    "                        \n",
-    "            total_send = math.ceil((send_data / int(i)) + (send_data / int(i)) * abnormal_packet_rate)\n",
-    "#             print(total_send)\n",
-    "            #재전송을 포함한 전체 전송율 (소수로 나눠지는 경우 올림처리)\n",
-    "            #정상 전송 + 재전송 횟수\n",
+    "            #prr 테이블 갱신                        \n",
+    "#             total_send = math.ceil((send_data / int(i)) + (send_data / int(i)) * abnormal_packet_rate)\n",
+    "\n",
+    "            #((페이로드 + 헤더) * (전체 바이트 / 페이로드)) / PRR        \n",
+    "            total_send = ((i + 9) * (send_data / i)) / (1 - abnormal_packet_rate)\n",
+    "            print(total_send)\n",
     "            \n",
     "            globals()['log_' + str(i) + 'bytes_distance_' + str(j)][\"RSSI\"] = globals()['log_' + str(i) + 'bytes_distance_' + str(j)][\"RSSI\"].apply(func)\n",
     "            # RSSI의 쉬운 계산을 위해 16진수에서 10진수로 변환\n",
     "        \n",
     "            packet_table[m][k] = total_send\n",
-    "            # 총 전송 횟수 테이블 갱신\n",
+    "            # 총 전송 데이터 크기 테이블 갱신\n",
     "        \n",
     "        else:  #만약 0인 경우?\n",
     "            packet_table[m][k] = None\n",
     "            prr_table[m][k] = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fda34e8",
+   "metadata": {},
+   "source": [
+    "((114 + 9) * (1000000/114)) / PRR\n",
+    "\n",
+    "((페이로드 + 헤더) * (전체 바이트 / 페이로드)) / PRR"
    ]
   },
   {
@@ -543,7 +632,7 @@
    "id": "dde87a0f",
    "metadata": {},
    "source": [
-    "# 재전송을 포함한 전체 전송 횟수\n",
+    "# 재전송을 포함한 전체 데이터 크기\n",
     "\n",
     "1,000,000bytes의 데이터를 보낼 때 10bytes, 114bytes로 분할"
    ]
@@ -590,28 +679,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>20bytes</th>\n",
-       "      <td>105000</td>\n",
-       "      <td>125200</td>\n",
-       "      <td>106000</td>\n",
-       "      <td>115400</td>\n",
-       "      <td>183000</td>\n",
-       "      <td>190600</td>\n",
-       "      <td>114600</td>\n",
-       "      <td>121600</td>\n",
-       "      <td>122800</td>\n",
+       "      <td>2000000.0</td>\n",
+       "      <td>2540106.951872</td>\n",
+       "      <td>2021276.595745</td>\n",
+       "      <td>2245862.884161</td>\n",
+       "      <td>11176470.588235</td>\n",
+       "      <td>20212765.957447</td>\n",
+       "      <td>2224824.355972</td>\n",
+       "      <td>2423469.387755</td>\n",
+       "      <td>2461139.896373</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>114bytes</th>\n",
-       "      <td>9808</td>\n",
-       "      <td>9720</td>\n",
-       "      <td>9737</td>\n",
-       "      <td>9878</td>\n",
-       "      <td>16913</td>\n",
-       "      <td>16895</td>\n",
-       "      <td>16983</td>\n",
-       "      <td>17334</td>\n",
-       "      <td>17334</td>\n",
+       "      <td>1223296.336078</td>\n",
+       "      <td>1209582.251593</td>\n",
+       "      <td>1212300.413956</td>\n",
+       "      <td>1234493.556546</td>\n",
+       "      <td>14985380.116959</td>\n",
+       "      <td>14580369.843528</td>\n",
+       "      <td>16858552.631579</td>\n",
+       "      <td>44956140.350877</td>\n",
+       "      <td>44956140.350877</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -619,13 +708,17 @@
        "</div>"
       ],
       "text/plain": [
-       "           22.5m   23.4m  23.85m   24.3m  24.75m   25.2m  25.65m   26.1m  \\\n",
-       "20bytes   105000  125200  106000  115400  183000  190600  114600  121600   \n",
-       "114bytes    9808    9720    9737    9878   16913   16895   16983   17334   \n",
+       "                   22.5m           23.4m          23.85m           24.3m  \\\n",
+       "20bytes        2000000.0  2540106.951872  2021276.595745  2245862.884161   \n",
+       "114bytes  1223296.336078  1209582.251593  1212300.413956  1234493.556546   \n",
        "\n",
-       "          26.55m   27m  \n",
-       "20bytes   122800  None  \n",
-       "114bytes   17334  None  "
+       "                   24.75m            25.2m           25.65m            26.1m  \\\n",
+       "20bytes   11176470.588235  20212765.957447   2224824.355972   2423469.387755   \n",
+       "114bytes  14985380.116959  14580369.843528  16858552.631579  44956140.350877   \n",
+       "\n",
+       "                   26.55m   27m  \n",
+       "20bytes    2461139.896373  None  \n",
+       "114bytes  44956140.350877  None  "
       ]
      },
      "execution_count": 19,
@@ -860,8 +953,10 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a705a4e6",
-   "metadata": {},
+   "id": "19b654b7",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -899,42 +994,42 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>20bytes</th>\n",
-       "      <td>1995000</td>\n",
-       "      <td>2378800</td>\n",
-       "      <td>2014000</td>\n",
-       "      <td>2192600</td>\n",
-       "      <td>3477000</td>\n",
-       "      <td>3621400</td>\n",
-       "      <td>2177400</td>\n",
-       "      <td>2310400</td>\n",
-       "      <td>2333200</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>2000000.000</td>\n",
+       "      <td>2540106.952</td>\n",
+       "      <td>2021276.596</td>\n",
+       "      <td>2245862.884</td>\n",
+       "      <td>11176470.588</td>\n",
+       "      <td>20212765.957</td>\n",
+       "      <td>2224824.356</td>\n",
+       "      <td>2423469.388</td>\n",
+       "      <td>2461139.896</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>114bytes</th>\n",
-       "      <td>1206384</td>\n",
-       "      <td>1195560</td>\n",
-       "      <td>1197651</td>\n",
-       "      <td>1214994</td>\n",
-       "      <td>2080299</td>\n",
-       "      <td>2078085</td>\n",
-       "      <td>2088909</td>\n",
-       "      <td>2132082</td>\n",
-       "      <td>2132082</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1223296.336</td>\n",
+       "      <td>1209582.252</td>\n",
+       "      <td>1212300.414</td>\n",
+       "      <td>1234493.557</td>\n",
+       "      <td>14985380.117</td>\n",
+       "      <td>14580369.844</td>\n",
+       "      <td>16858552.632</td>\n",
+       "      <td>44956140.351</td>\n",
+       "      <td>44956140.351</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            22.5m    23.4m   23.85m    24.3m   24.75m    25.2m   25.65m  \\\n",
-       "20bytes   1995000  2378800  2014000  2192600  3477000  3621400  2177400   \n",
-       "114bytes  1206384  1195560  1197651  1214994  2080299  2078085  2088909   \n",
+       "               22.5m       23.4m      23.85m       24.3m       24.75m  \\\n",
+       "20bytes  2000000.000 2540106.952 2021276.596 2245862.884 11176470.588   \n",
+       "114bytes 1223296.336 1209582.252 1212300.414 1234493.557 14985380.117   \n",
        "\n",
-       "            26.1m   26.55m  27m  \n",
-       "20bytes   2310400  2333200  NaN  \n",
-       "114bytes  2132082  2132082  NaN  "
+       "                25.2m       25.65m        26.1m       26.55m   27m  \n",
+       "20bytes  20212765.957  2224824.356  2423469.388  2461139.896  None  \n",
+       "114bytes 14580369.844 16858552.632 44956140.351 44956140.351  None  "
       ]
      },
      "execution_count": 25,
@@ -943,25 +1038,66 @@
     }
    ],
    "source": [
-    "for i, j in zip(packet_bytes_list, packet_bytes):\n",
-    "    packet_table.loc[i] = packet_table.loc[i] * (int(j) + 9) # 9는 헤더 길이\n",
-    "    # print(int(j) + 9)\n",
-    "    \n",
     "packet_table"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "680822ae",
+   "cell_type": "markdown",
+   "id": "a75941e0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "((114 + 9) * (1000000/114)) / PRR\n",
+    "\n",
+    "((페이로드 + 헤더) * (전체 바이트 / 페이로드)) / PRR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd21ba9b",
+   "metadata": {},
+   "source": [
+    "# 정리\n",
+    "\n",
+    "'Design and Implementation of (OTA in Arduino for IoT~~~~~') <br>\n",
+    "(~~의 설계와 구현)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Introduct...\n",
+    "\n",
+    "동기, 어려움 등..\n",
+    "\n",
+    "---\n",
+    "\n",
+    "기존 문제점\n",
+    "\n",
+    "1. 아두이노에서 1홉 OTA 업데이트를 지원하지만 다중 홉에서는 지원하지 않는다.\n",
+    "2. 추가 에너지 소모 고려 X\n",
+    "3. 다른 OTA... << 채널 상태 미고려\n",
+    "\n",
+    "---\n",
+    "\n",
+    "채널 상태를 고려한 다중 홉에서의 OTA 제안(설계)하고 구현한다.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "1.\n",
+    "\n",
+    "플로우 차트..\n",
+    "\n",
+    "차별성 강조..\n",
+    "\n",
+    "deluge...\n",
+    "\n",
+    "\n",
+    "\n",
+    "2. 패킷 고정 분할 크기를 RSSI를 고려하여"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -975,7 +1111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
